--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devDependencies": {
         "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
+        "create-vite": "^4.4.1",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.31",
